# RusticTales

./: .gitignore  Cargo.toml  README.md  options.ron
rustic_tales/: .gitignore  Cargo.toml  options.ron
rustic_tales/src/: ansi.rs  buffer.rs  debug.rs  err.rs  main.rs  options.rs  storyteller.rs  utils.rs
rustic_tales/src/commands/: mod.rs  prompts.rs
rustic_tales/src/storyteller/: mod.rs  story.rs  storyteller.rs  storyteller_base.rs  storyteller_states.rs  unit.rs
rustic_tales/stories/: basic.txt  demo1.txt  demo2.txt  hi.txt  multi_page.txt  random.txt  text.txt  user_input.txt  user_input_2.txt
rustic_tales/stories/images/: README.md
script/: Cargo.toml
script/src/: lib.rs  token.rs
