[package]
name = "rustic_tales"
version = "0.1.0"
authors = ["NivenT <nachenjang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
script = { path = "../script" }
regex = "1"
image = "0.23.12"
terminal_size = "0.1.15"
ron = "0.6.4"
serde = "1.0.117"
globset = "0.4.6"