[package]
name = "script"
version = "0.1.0"
authors = ["NivenT <nachenjang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"

# Used for tests, examples, and benchmarks
[dev-dependencies]
reqwest = { version = "0.10.10", features = ["blocking"]} 